{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 445,
  "lineage": "5c484b11-e2a9-3eab-5221-9e19d60bb453",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:205930608632:internet-gateway/igw-0da2d3059110094c9",
            "id": "igw-0da2d3059110094c9",
            "owner_id": "205930608632",
            "tags": {
              "Name": "rds-taipy-igw",
              "managed_by": "terraform"
            },
            "tags_all": {
              "Name": "rds-taipy-igw",
              "managed_by": "terraform"
            },
            "vpc_id": "vpc-0353e9e252ba54202"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "main_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08faae5c667f8c65f",
            "original_route_table_id": "rtb-0c05bcef529127eb9",
            "route_table_id": "rtb-0c05bcef529127eb9",
            "vpc_id": "vpc-0353e9e252ba54202"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:205930608632:route-table/rtb-0c05bcef529127eb9",
            "id": "rtb-0c05bcef529127eb9",
            "owner_id": "205930608632",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0da2d3059110094c9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rds-taipy-public-route-table",
              "managed_by": "terraform"
            },
            "tags_all": {
              "Name": "rds-taipy-public-route-table",
              "managed_by": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0353e9e252ba54202"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb152d56f2049a10",
            "route_table_id": "rtb-0c05bcef529127eb9",
            "subnet_id": "subnet-097555cc1a1c3964f"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052e38d0f0d14e188",
            "route_table_id": "rtb-0c05bcef529127eb9",
            "subnet_id": "subnet-09009ce28d4267a0a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:205930608632:security-group/sg-0315c730f585c06aa",
            "description": "Security group para RDS PostgreSQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0315c730f585c06aa",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Trafego interno da VPC",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "177.128.8.127/32"
                ],
                "description": "Acesso do meu IP",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rds-security-group",
            "name_prefix": "",
            "owner_id": "205930608632",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-sg",
              "managed_by": "terraform"
            },
            "tags_all": {
              "Name": "rds-sg",
              "managed_by": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0353e9e252ba54202"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "s3_access_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:205930608632:security-group/sg-0b22717e6780acedf",
            "description": "Security group para acesso ao S3",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b22717e6780acedf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permitir trafego HTTP/HTTPS para S3",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "s3-access-sg",
            "name_prefix": "",
            "owner_id": "205930608632",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "s3-access-sg",
              "managed_by": "terraform"
            },
            "tags_all": {
              "Name": "s3-access-sg",
              "managed_by": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0353e9e252ba54202"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:205930608632:subnet/subnet-036a47dc4669cbfe2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-036a47dc4669cbfe2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "205930608632",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-a",
              "managed_by": "terraform"
            },
            "tags_all": {
              "Name": "private-subnet-a",
              "managed_by": "terraform"
            },
            "vpc_id": "vpc-0353e9e252ba54202"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:205930608632:subnet/subnet-0f58ee172056607f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f58ee172056607f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "205930608632",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-b"
            },
            "tags_all": {
              "Name": "private-subnet-b"
            },
            "vpc_id": "vpc-0353e9e252ba54202"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:205930608632:subnet/subnet-097555cc1a1c3964f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-097555cc1a1c3964f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "205930608632",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-a",
              "managed_by": "terraform"
            },
            "tags_all": {
              "Name": "public-subnet-a",
              "managed_by": "terraform"
            },
            "vpc_id": "vpc-0353e9e252ba54202"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:205930608632:subnet/subnet-09009ce28d4267a0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09009ce28d4267a0a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "205930608632",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-b",
              "managed_by": "terraform"
            },
            "tags_all": {
              "Name": "public-subnet-b",
              "managed_by": "terraform"
            },
            "vpc_id": "vpc-0353e9e252ba54202"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:205930608632:vpc/vpc-0353e9e252ba54202",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ea52ed55f370bf5f",
            "default_route_table_id": "rtb-0c05bcef529127eb9",
            "default_security_group_id": "sg-0a521d65c6972c14b",
            "dhcp_options_id": "dopt-0df3ba0dfd1a44c7a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0353e9e252ba54202",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c05bcef529127eb9",
            "owner_id": "205930608632",
            "tags": {
              "Name": "rds-taipy-vpc",
              "managed_by": "terraform"
            },
            "tags_all": {
              "Name": "rds-taipy-vpc",
              "managed_by": "terraform"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:205930608632:vpc-endpoint/vpce-06e617ec133b7cc5a",
            "cidr_blocks": [
              "18.34.252.0/22",
              "52.219.141.0/24",
              "18.34.72.0/21",
              "52.219.96.0/20",
              "52.219.224.0/21",
              "16.12.60.0/22",
              "52.219.232.0/22",
              "52.219.80.0/20",
              "3.5.128.0/22",
              "52.219.142.0/23",
              "3.5.132.0/23",
              "16.12.64.0/22",
              "52.219.212.0/22",
              "52.219.176.0/22"
            ],
            "id": "vpce-06e617ec133b7cc5a",
            "owner_id": "205930608632",
            "policy": "{\"Statement\":[{\"Action\":\"s3:*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2012-10-17\"}",
            "prefix_list_id": "pl-7ba54012",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0c05bcef529127eb9"
            ],
            "service_name": "com.amazonaws.us-east-2.s3",
            "state": "available",
            "tags": {
              "Name": "s3-endpoint",
              "managed_by": "terraform"
            },
            "tags_all": {
              "Name": "s3-endpoint",
              "managed_by": "terraform"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0353e9e252ba54202"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}